--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!--head-->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!--head-->
-</head>
-
-<body>
-  <div id="root">
-    <!--app-html-->
-  </div>
-  <div id="alert-root"></div>
-  <script type="module" src="/src/client/app/entry.client.tsx"></script>
-  <!--context-->
-</body>
-
+  <body>
+    <div id="root">
+      <!--app-html-->
+    </div>
+    <div id="alert-root"></div>
+    <script type="module" src="/src/client/app/entry.client.tsx"></script>
+    <!--context-->
+  </body>
 </html>
